Fixes lint errors; bumps min SDK to 8
At the time of writing, SDK 7 and below accounts for less than 5% of
devices.